# Cooperative-MAPF

./: .gitignore  CMakeLists.txt  Co-MAPF.yml  CoCBS.py  README.md  benchmarks.py  classes.py  config.py  constraints.py  environment.py  planners.py  run.py  run_batch.py
get_best_assignments/: CMakeLists.txt  ITaskAssignment.cpp  ITaskAssignment.h  assign2DRelaxed.cpp  assign2DRelaxed.h  assignAuctionWithPrice.cpp  assignAuctionWithPrice.h  assignkbestsd.cpp  assignkbestsd.h  assignsd.cpp  assignsd.h  bsxfun.cpp  bsxfun.h  buildInfo.mat  codeInfo.mat  compileInfo.mat  get_best_assignments.lib  get_best_assignments_rtw.bat  get_best_assignments_rtw.mk  get_best_assignments_rtw.rsp  get_best_assignments_rtw_comp.rsp  get_best_assignments_rtwutil.cpp  get_best_assignments_rtwutil.h  get_best_assignments_types.h  kbestEnforceConstraints.cpp  kbestEnforceConstraints.h  kbestSDPartitionSolution.cpp  kbestSDPartitionSolution.h  lapAuction.cpp  lapAuction.h  lapRemoveImpossibles.cpp  lapRemoveImpossibles.h  minOrMax.cpp  minOrMax.h  repmat.cpp  repmat.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  (+14 more)
inc/: CBSHeuristic.h  CBSNode.h  CoCBS.h  Dijkstra.h  Instance.h  MDD.h  MeetingsTable.h  SIPP.h  SingleAgentSolver.h  SpaceTimeAStar.h  common.h
src/: CBSHeuristic.cpp  CBSNode.cpp  CoCBS.cpp  Conflict.cpp  ConstraintTable.cpp  Dijkstra.cpp  IncrementalPairwiseMutexPropagation.cpp  Instance.cpp  MDD.cpp  MeetingsTable.cpp  MutexReasoning.cpp  RectangleReasoning.cpp  ReservationTable.cpp  SIPP.cpp  SingleAgentSolver.cpp  SpaceTimeAStar.cpp  driver.cpp
(+67 files in other folders)
